--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.0",
     "axios": "^1.9.0",
+    "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "next": "15.3.2",
     "react": "^19.0.0",
