--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "test": "vitest run",
     "ts-check": "tsc --noEmit",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
@@ -31,19 +32,23 @@
     "@storybook/addon-onboarding": "^8.6.4",
     "@storybook/blocks": "^8.6.4",
     "@storybook/experimental-addon-test": "^8.6.4",
-    "@storybook/experimental-nextjs-vite": "^8.6.4",
+    "@storybook/experimental-nextjs-vite": "^8.6.14",
     "@storybook/nextjs": "^8.6.4",
     "@storybook/react": "^8.6.4",
     "@storybook/test": "^8.6.4",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.0.8",
     "@vitest/coverage-v8": "^3.0.8",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "eslint-plugin-storybook": "^0.11.4",
+    "jsdom": "^26.1.0",
     "playwright": "^1.51.0",
     "storybook": "^8.6.4",
     "tailwindcss": "^4",
