ビルドを通過

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "NODE_ENV=production next build",
     "start": "next start",
     "test": "vitest run",
     "ts-check": "tsc --noEmit",
@@ -50,6 +50,7 @@
     "eslint-plugin-storybook": "^0.11.4",
     "jsdom": "^26.1.0",
     "playwright": "^1.51.0",
+    "prettier": "^3.5.3",
     "storybook": "^8.6.4",
     "tailwindcss": "^4",
     "typescript": "^5",
