--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "vitest run",
     "ts-check": "tsc --noEmit",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006 --ci",
     "build-storybook": "storybook build",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
