--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_APP_NAME=nextjs-boilerplate
 NEXT_PUBLIC_STRIPE_KEY=xxxxxxxxxxxxxxx
 NEXT_PUBLIC_RECAPTCHAV3_SITEKEY=xxxxxxxxxxxxxxx
+NEXT_PUBLIC_ENV_NAME=development
+NEXT_PUBLIC_ENDPOINT_URL=https://laraec.isystk.com/api
