--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,13 +42,5 @@
     "sourceMap": true,                        /* 対応する '.map'ファイルを生成します。 */
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": [
-    "node_modules",
-    "**/*.test.ts",
-    "**/*.test.tsx",
-    "**/*.spec.ts",
-    "**/*.spec.tsx",
-    "**/*.stories.ts",
-    "**/*.stories.tsx"
-  ]
+  "exclude": ["node_modules"]
 }
