Titleを動的に設定するように修正

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_APP_NAME=nextjs-boilerplate
-NEXT_PUBLIC_STRIPE_KEY=xxxxxxxxxxxxxxx
-NEXT_PUBLIC_RECAPTCHAV3_SITEKEY=xxxxxxxxxxxxxxx
 NEXT_PUBLIC_ENV_NAME=development
-NEXT_PUBLIC_ENDPOINT_URL=https://laraec.isystk.com/api
+NEXT_PUBLIC_APP_URL=https://localhost
+NEXT_PUBLIC_ENDPOINT_URL=https://localhost/api
+NEXT_PUBLIC_STRIPE_KEY=pk_test_xxxxx
