--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.89.0",
+    "three": "^0.177.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
